# Resume_vault_generator-final

./: README.md
resume-vault-final-main/: .gitignore  README.md  check_models.py  pyproject.toml  resume_output.json
resume-vault-final-main/resume_frontend/: package-lock.json  package.json  tailwind.config.js
resume-vault-final-main/resume_frontend/src/app/: globals.css  layout.tsx  page.tsx
resume-vault-final-main/resume_frontend/src/app/api/profile/: route.ts
resume-vault-final-main/resume_frontend/src/app/portfolio/: page.tsx
resume-vault-final-main/resume_frontend/src/app/presentation/: page.tsx
resume-vault-final-main/resume_frontend/src/app/standards/: page.tsx
resume-vault-final-main/resume_frontend/src/components/: TechBackground.tsx  ThemeToggle.tsx  TiltCard.tsx
resume-vault-final-main/src/: resume_output.json
resume-vault-final-main/src/resume_vault/: candidate_profile.json  crew.py  main.py
resume-vault-final-main/src/resume_vault/config/: agents.yaml  tasks.yaml
resume-vault-final-main/src/resume_vault/tools/: profile_loader_tool.py
