[project]
name = "resume_vault"
version = "0.1.0"
description = "resume_vault using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
resume_vault = "resume_vault.main:run"
run_crew = "resume_vault.main:run"
train = "resume_vault.main:train"
replay = "resume_vault.main:replay"
test = "resume_vault.main:test"
run_with_trigger = "resume_vault.main:run_with_trigger"
api = "resume_vault.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
